<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/vs_450"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg_main"
    android:orientation="vertical"
    android:paddingLeft="@dimen/vs_20"
    android:paddingTop="@dimen/vs_20"
    android:paddingRight="@dimen/vs_20"
    android:paddingBottom="@dimen/vs_20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/color_000000_60"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/cast_title"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/ts_24"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/vs_200"
        android:layout_marginTop="@dimen/vs_20">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/vs_40"
            android:layout_height="@dimen/vs_40"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/anim_loading"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvScanning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vs_60"
            android:text="@string/cast_scanning"
            android:textColor="@color/color_FFFFFF_80"
            android:textSize="@dimen/ts_18"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cast_no_devices"
            android:textColor="@color/color_FFFFFF_80"
            android:textSize="@dimen/ts_18"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vs_20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnRefresh"
            android:layout_width="0dp"
            android:layout_height="@dimen/vs_50"
            android:layout_marginEnd="@dimen/vs_10"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_main"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cast_refresh"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/ts_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/vs_50"
            android:layout_marginStart="@dimen/vs_10"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_main"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cast_cancel"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/ts_18"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
