<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="@dimen/vs_600"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_dialog_bg_main">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="start"
            android:gravity="center"
            android:maxLines="1"
            android:padding="@dimen/vs_20"
            android:singleLine="true"
            android:text="@string/local_file_picker_title"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/ts_24"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.owen.tvrecyclerview.widget.TvRecyclerView
            android:id="@+id/rv_files"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/vs_20"
            android:paddingRight="@dimen/vs_20"
            app:layout_constraintHeight_min="@dimen/vs_200"
            app:layout_constraintHeight_max="@dimen/vs_340"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:tv_horizontalSpacingWithMargins="@dimen/vs_6"
            app:tv_layoutManager="V7LinearLayoutManager"
            app:tv_selectedItemIsCentered="true"
            app:tv_verticalSpacingWithMargins="@dimen/vs_6" />

        <LinearLayout
            android:id="@+id/ll_actions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/vs_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_files">

            <TextView
                android:id="@+id/btn_select_current"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_dialog_main"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="@dimen/vs_45"
                android:padding="@dimen/vs_10"
                android:text="@string/local_file_picker_select_current"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/ts_22" />

            <View
                android:layout_width="@dimen/vs_20"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/btn_parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_dialog_main"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="@dimen/vs_45"
                android:padding="@dimen/vs_10"
                android:text="@string/local_file_picker_parent"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/ts_22" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
